# VI

./: .gitignore  README.md
VI-RT/: .gitignore  CMakeLists.txt
VI-RT/VI-RT/: main.cpp
VI-RT/VI-RT/Camera/: camera.hpp  perspective.cpp  perspective.hpp
VI-RT/VI-RT/Image/: ImagePPM.cpp  ImagePPM.hpp  image.hpp
VI-RT/VI-RT/Image/Converters/: ImageConverter.cpp  ImageConverter.h  ppm2jpg.py  ppm2openexr.py  ppm2pfm.py
VI-RT/VI-RT/Light/: AmbientLight.hpp  AreaLight.h  AreaLight.hpp  PointLight.hpp  light.hpp
VI-RT/VI-RT/Primitive/: BB.hpp  primitive.hpp
VI-RT/VI-RT/Primitive/BRDF/: Phong.cpp  Phong.hpp
VI-RT/VI-RT/Primitive/Geometry/: Triangle.cpp  Triangle.h  Triangle.hpp  geometry.hpp  mesh.cpp  mesh.hpp
VI-RT/VI-RT/Rays/: intersection.hpp  ray.hpp
VI-RT/VI-RT/Renderer/: StandardRenderer.cpp  StandardRenderer.hpp
VI-RT/VI-RT/Scene/: scene.cpp  scene.hpp
VI-RT/VI-RT/Scene/tinyobjloader/models/: cornell_box_VI.mtl
VI-RT/VI-RT/Scene/tinyobjloader/python/: bindings.cc
VI-RT/VI-RT/Shader/: AmbientShader.cpp  AmbientShader.hpp  DistributedShader.cpp  DistributedShader.hpp  PathTracerShader.cpp  PathTracerShader.hpp  Shader.hpp  WhittedShader.cpp
VI-RT/VI-RT/utils/: RGB.hpp  vector.hpp
VI-RT/converted_images/: EXR.exr
